samples/chapter06/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  defaultBackend:
    service:
      name: sample-ingress-default
      port:
        number: 8888
  rules:
  - host: sample.example.com
    http:
      paths:
      - pathType: Prefix
        path: /path1
        backend:
          service:
            name: sample-ingress-svc-1
            port:
              number: 8888
  - host: sample.example.com
    http:
      paths:
      - pathType: Prefix
        path: /path2
        backend:
          service:
            name: sample-ingress-svc-2
            port:
              number: 8888
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
